SWT platform jar is now downloaded depending on OS family. Currently supported are Windows and MacOS.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2095 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -78,6 +78,20 @@
 		<include name="**/*.xml"/>
 	</patternset>
 
+	<!-- determine the platform swt jar file name and download path from java.net -->
+	<condition property="swt.jar.path" value="https://glazedlists.dev.java.net/files/documents/1073/64389/">
+		<os family="windows"/>
+	</condition>
+	<condition property="swt.jar.file" value="org.eclipse.swt.win32.win32.x86.jar">
+		<os family="windows"/>
+	</condition>
+	<condition property="swt.jar.path" value="https://glazedlists.dev.java.net/files/documents/1073/64390/">
+		<os family="mac"/>
+	</condition>
+	<condition property="swt.jar.file" value="org.eclipse.swt.carbon.macosx.jar">
+		<os family="mac"/>
+	</condition>
+
 	<target name="clean"
 		description="Clean up generated files, forcing them to be rebuilt.">
 
@@ -260,13 +274,8 @@
         </java>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
-            <arg value="https://glazedlists.dev.java.net/files/documents/1073/64390/org.eclipse.swt.carbon.macosx.jar"/>
-            <arg value="extensions/swt/lib/org.eclipse.swt.carbon.macosx.jar"/>
-        </java>
-        <java classname="ca.odell.glazedlists.impl.HttpClient">
-            <classpath path="${classes.dir}"/>
-            <arg value="https://glazedlists.dev.java.net/files/documents/1073/64389/org.eclipse.swt.win32.win32.x86.jar"/>
-            <arg value="extensions/swt/lib/org.eclipse.swt.win32.win32.x86.jar"/>
+            <arg value="${swt.jar.path}${swt.jar.file}"/>
+            <arg value="extensions/swt/lib/${swt.jar.file}"/>
         </java>
         <javac destdir="${classes.dir}" srcdir="extensions/swt/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
@@ -584,7 +593,7 @@
         <mkdir dir="${java14_glazedlists.dir}/test"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="test"/>
-            <arg value="${classes.dir}${path.separator}${ant.home}/lib/junit.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar${path.separator}extensions/hibernate/lib/hibernate.jar${path.separator}extensions/swinglabs/lib/swingx.jar"/>
+            <arg value="${classes.dir}${path.separator}${ant.home}/lib/junit.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar${path.separator}extensions/hibernate/lib/hibernate.jar${path.separator}extensions/swinglabs/lib/swingx.jar${path.separator}extensions/swt/lib/org.eclipse.core.commands.jar${path.separator}extensions/swt/lib/org.eclipse.jface.jar${path.separator}extensions/swt/lib/${swt.jar.file}"/>
             <arg value="${java14_glazedlists.dir}/test"/>
         </java>
 
@@ -592,7 +601,7 @@
         <mkdir dir="${java14_glazedlists.dir}/extensions/swt/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="extensions/swt/source"/>
-            <arg value="${classes.dir}${path.separator}extensions/swt/lib/org.eclipse.core.commands.jar${path.separator}extensions/swt/lib/org.eclipse.equinox.common.jar${path.separator}extensions/swt/lib/org.eclipse.jface.jar${path.separator}extensions/swt/lib/ org.eclipse.swt.carbon.macosx.jar${path.separator}extensions/swt/lib/org.eclipse.swt.win32.win32.x86.jar"/>
+            <arg value="${classes.dir}${path.separator}extensions/swt/lib/org.eclipse.core.commands.jar${path.separator}extensions/swt/lib/org.eclipse.jface.jar${path.separator}extensions/swt/lib/${swt.jar.file}"/>
             <arg value="${java14_glazedlists.dir}/extensions/swt/source"/>
         </java>
 
@@ -656,7 +665,7 @@
         <mkdir dir="${java14_glazedlists.dir}/extensions/issuesbrowser/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="extensions/issuesbrowser/source"/>
-            <arg value="${classes.dir}${path.separator}extensions/swt/lib/org.eclipse.core.commands.jar${path.separator}extensions/swt/lib/org.eclipse.equinox.common.jar${path.separator}extensions/swt/lib/org.eclipse.jface.jar${path.separator}extensions/swt/lib/ org.eclipse.swt.carbon.macosx.jar${path.separator}extensions/swt/lib/org.eclipse.swt.win32.win32.x86.jar${path.separator}extensions/jfreechart/lib/jcommon.jar${path.separator}extensions/jfreechart/lib/jfreechart.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar${path.separator}extensions/nachocalendar/lib/nachocalendar.jar${path.separator}extensions/issuesbrowser/lib/http.jar"/>
+            <arg value="${classes.dir}${path.separator}extensions/swt/lib/org.eclipse.core.commands.jar${path.separator}extensions/swt/lib/org.eclipse.jface.jar${path.separator}extensions/swt/lib/${swt.jar.file}${path.separator}extensions/jfreechart/lib/jcommon.jar${path.separator}extensions/jfreechart/lib/jfreechart.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar${path.separator}extensions/nachocalendar/lib/nachocalendar.jar${path.separator}extensions/issuesbrowser/lib/http.jar"/>
             <arg value="${java14_glazedlists.dir}/extensions/issuesbrowser/source"/>
         </java>
 
