--- a/build.xml
+++ b/build.xml
@@ -221,7 +221,7 @@
 		description="Compile the default components of the source.">
 	</target>
 
-	<target name="compileall" depends="core,migrationkit,swing,io,swt,ktable,issuesbrowser,swinglabs,hibernate,icu4j"
+	<target name="compileall" depends="core,migrationkit,swing,io,calculations,swt,ktable,issuesbrowser,swinglabs,hibernate,icu4j"
 		description="Compile all components of the source.">
 	</target>
 
@@ -266,6 +266,10 @@
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        EXTENSIONS
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+    <target name="calculations" depends="swing">
+        <javac destdir="${classes.dir}" srcdir="extensions/calculations/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off"/>
+    </target>
 
     <target name="swt" depends="core">
         <mkdir dir="extensions/swt/lib"/>
