Forcing compiletests target before uploading a latest build, because sometimes java14 test compile errors remain undetected.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2177 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -723,7 +723,7 @@
 		</zip>
 	</target>
 
-    <target name="upload" depends="dist,jar"
+    <target name="upload" depends="dist,jar,compiletests"
         description="Upload binaries to java.net, see http://javanettasks.dev.java.net/">
 
         <!-- download the javanettasks library for uploading jars to the java.net webserver -->
