--- a/build.xml
+++ b/build.xml
@@ -621,6 +621,14 @@
             <arg value="${java14_glazedlists.dir}/extensions/swt/source"/>
         </java>
 
+        <!-- Declaw calculation/ -->
+        <mkdir dir="${java14_glazedlists.dir}/extensions/calculation/source"/>
+        <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
+            <arg value="extensions/calculation/source"/>
+            <arg value="${classes.dir}"/>
+            <arg value="${java14_glazedlists.dir}/extensions/calculation/source"/>
+        </java>
+
         <!-- Declaw jfreechart/ -->
         <mkdir dir="${java14_glazedlists.dir}/extensions/jfreechart/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
