--- a/build.xml
+++ b/build.xml
@@ -302,7 +302,7 @@
         </javac>
     </target>
 
-    <target name="ktable" depends="core,swt">
+    <target name="ktable" depends="core,swt,issuesbrowser">
         <mkdir dir="extensions/ktable/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
