fixing some java14 build warnings
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2226 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -642,7 +642,7 @@
         <mkdir dir="${java14_glazedlists.dir}/extensions/calculation/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="extensions/calculation/source"/>
-            <arg value="${classes.dir}"/>
+            <arg value="${classes.dir}${path.separator}extensions/calculation/lib/jcommon.jar${path.separator}extensions/calculation/lib/jfreechart.jar"/>
             <arg value="${java14_glazedlists.dir}/extensions/calculation/source"/>
         </java>
 
