--- a/build.xml
+++ b/build.xml
@@ -275,16 +275,6 @@
 
     <target name="calculation" depends="swing">
         <mkdir dir="extensions/calculation/lib"/>
-        <java classname="ca.odell.glazedlists.impl.HttpClient">
-            <classpath path="${classes.dir}"/>
-            <arg value="https://glazedlists.dev.java.net/files/documents/1073/26197/jcommon.jar"/>
-            <arg value="extensions/calculation/lib/jcommon.jar"/>
-        </java>
-        <java classname="ca.odell.glazedlists.impl.HttpClient">
-            <classpath path="${classes.dir}"/>
-            <arg value="https://glazedlists.dev.java.net/files/documents/1073/26198/jfreechart.jar"/>
-            <arg value="extensions/calculation/lib/jfreechart.jar"/>
-        </java>
         <javac destdir="${classes.dir}" srcdir="extensions/calculation/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/calculation/lib/" includes="*.jar"/>
@@ -292,7 +282,7 @@
         </javac>
     </target>
 
-    <target name="swt" depends="core">
+    <target name="swt" depends="core,calculation">
         <mkdir dir="extensions/swt/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
@@ -398,7 +388,7 @@
         <javac destdir="${classes.dir}" srcdir="extensions/treetable/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off"/>
     </target>
 
-    <target name="jfreechart" depends="swing">
+    <target name="jfreechart" depends="swing,calculation">
         <mkdir dir="extensions/jfreechart/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
